--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,20 +80,18 @@ header{
 
 /*JUMBOTRON*/
 .jumbotron{
-    /* background-color: #00068B; */
     height: 600px;
-    /* display: flex; */
-    /* justify-content: center; */
     padding: 50px 0px;
 }
 
 .jumbotron-item{
     width: 50%;
     margin: 0 auto;
-    border: 2px dashed black;
     height: 100%;
     text-align: center;
+    padding: 70px 100px;
 }
+
 p{
     align-items: center;
     font-size: 1.2rem;
@@ -102,6 +100,23 @@ p{
     font-size: 50px;
     margin-bottom: 50px;
 }
+
+.down-login-bar{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    font-size: 1.3rem;
+    gap: 30px;
+}
+
+.fa-solid{
+    padding-right: 7px;
+}
+
+.login.white.button-bg{
+    background-color: #23272A;
+}
+
 /*Main*/
 /*SectionChannels*/
 
