--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,22 +43,22 @@ header{
     padding: 8px;
     border-radius: 20px;
 }
-/*    */
 
-.section-container{
-    min-height: 500px;
-    display: flex;
-    justify-content: center;
+.h-100{
+    height: 100%;
 }
 
-.main-items-container{
-    min-width: 70%;
-    display: flex;
-    padding: 40px;
-    border: 2px dashed white;
+.bg-gray{
+    background-color: lightslategray;
 }
 
-/*Header*/
+h2{
+    color: #23272A;
+    font-size: 2rem;
+}
+
+/*NAVBAR*/
+
 .nav-bar{
     height: 100%;
      display: flex;
@@ -120,40 +120,32 @@ p{
 /*Main*/
 /*SectionChannels*/
 
+section{
+    height: 500px;
+    padding: 60px 0px;
+}
+
 .col-blue{
     min-width: 60%;
-    border: 2px dashed black;
-    background-color: #1D91FF;
 }
 
 .col-pink{
     min-width: 40%;
     border: 2px dashed black;
     background-color: #FFC0CB;
-}
-/*SECONDA SEZIONE*/
-.section-container.gray{
-    background-color: #D3D3D3; 
+    text-align: center;
+    padding: 30px 50px;
 }
 
-/*QUARTA SEZIONE*/
-.section-container.gray.big{
-    min-height: 1000px;
-}
-    
-.container-big-gray{
-    min-height: 1000px;
-    background-color: #D3D3D3;
-    display: flex;
-    justify-content: center;
-    padding: 40px 0px;
+
+
+.big.bg-gray{
+    height: 1000px;
 }
 
-.col-green-big{
-    background-color: #238B22 ;
-    border: 2px dashed black;
-    min-width: 70%;
-    padding: 40px 0px;
+.big-col{
+    flex-basis: 100%;
+    background-color: darkgreen;
 }
 
 /*FOOTER*/
