--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,13 +48,22 @@ header{
 }
 
 .bg-gray{
-    background-color: lightslategray;
+    background-color: #F6F6F6;
+    padding: 50px 0px;
 }
 
 h2{
     color: #23272A;
-    font-size: 2.3rem;
+    font-size: 2.5rem;
     padding-bottom: 20px;
+}
+
+.centered{
+    text-align: center;
+}
+
+.violet{
+    background-color: #8FA1E1;
 }
 
 /*NAVBAR*/
@@ -117,14 +126,15 @@ p{
 }
 
 /*Main*/
-/*SectionChannels*/
 section{
     height: 500px;
     padding: 60px 0px;
+    margin: 200px 0px;
 }
 
 .col-blue{
     min-width: 60%;
+    display: flex;
 }
 
 .col-pink{
@@ -133,15 +143,35 @@ section{
     padding: 30px 50px;
 }
 
-
-
 .big.bg-gray{
     height: 1000px;
+    height: 100%;
+    margin: 0 auto;
 }
 
 .big-col{
-    flex-basis: 100%;
-    background-color: darkgreen;
+    padding: 50px 0px;
+    margin: 0 auto;
+}
+
+.bg-stars{
+    justify-content: center;
+    margin: 0 auto;
+    width: 50%;
+    padding: 30px;
+    background-image: url(../img/stars.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+h3{
+    font-size: 1.5rem;
+}
+
+
+.button.container.flex{
+    justify-content: center;
 }
 
 /*FOOTER*/
